Increase z-index of sticky sidebar to fix the overlay

--- a/source/features/make-discussion-sidebar-sticky.css
+++ b/source/features/make-discussion-sidebar-sticky.css
@@ -1,5 +1,5 @@
 .rgh-sticky-sidebar {
 	position: sticky;
 	top: 60px !important; /* Matches sticky header's height */
-	z-index: 26 !important;
+	z-index: 32 !important; /* Higher than pagehead-actions */
 }
